syntax = "proto3";

option csharp_namespace = "AdtService.Api";

package adt;

service AdtRpcService {
  rpc AdmitPatient (AdmitPatientRequest) returns (AdmitPatientReply);
  rpc DischargePatient (DischargePatientRequest) returns (DischargePatientReply);
  //rpc TransferPatient (TransferPatientRequest) returns (TransferPatientReply);
}

message AdmitPatientRequest {
  string name = 1;
}

message AdmitPatientReply {
  string message = 1;
}

message DischargePatientRequest {
  string name = 1;
}

message DischargePatientReply {
  string message = 1;
}
